--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	 <a href="https://in.linkedin.com/in/saxenanikhil26" target="_blank" title="follow me on linkedin" class="tips"><i class="icon-linkedin-1 iconRounded"></i></a>&nbsp;
 	 <a href="https://www.facebook.com/nikhil.saxena26" target="_blank" title="follow me on facebook"><img src="facebook.png" class="Facebook" width="30" height="30"></img></a></div>
     </div>
-   <img src="site_image.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Nikhil Saxena" width="300" height="300" title="Yes! It's Me :D" >
+   <img src="https://cloud.githubusercontent.com/assets/6831942/14806233/dc657e72-0b8e-11e6-976e-461df6ec7066.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Nikhil Saxena" width="300" height="300" title="Yes! It's Me :D" >
    <br><br><br><font size="5" face="Modern">Hi, I am </font><b><font size="6">Nikhil Saxena</b></font>
    <br>
    <font size="3"><span class="glyphicon glyphicon-map-marker" title="It's where I live"></span> Pune, India</font><br><br>
