--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <br>
   
   <!--It's All About Me-->
-  <div class="container-fluid bg-1 middle text-center" id="About Me">
+  <div class="container-fluid bg-1 text-center" id="About Me">
      <h2 class="margin"><font face="verdana">About Me</h2>
 	  
 	 <div class="content about_line_spacing">I was born in Aligarh, in the state of Uttar Pradesh, India<br>
@@ -133,7 +133,7 @@
 	 I got a B.Tech degree in Information Technology from PSIT, Kanpur (U.P.T.U, Lucknow).</br>
 	 I spend my most of the time writing Programs in C language.<br>
 	 After my B.Tech, I started working with Tata Consultancy Services Ltd, Pune.
-	 
+	 <br><br><br><br>
 	 
 	 </div> 
 	 
