--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	    <li><a href="index.html#About Me"><font color="white">About Me</font></a></li>
         <li><a href="index.html#Projects"><font color="white">Projects</font></a></li>
         <li><a href="#"><font color="white">Resume</font></a></li>
-        <li><a href="#"><font color="white">Me</font></a></li>
+        <li><a href="#"><font color="white">Contact Me</font></a></li>
     </div>	
   </nav>
   <br>
@@ -111,8 +111,10 @@
 	 <div class="col-sm-4"></div>
 	 <div class="col-sm-4"></div>
 	 <div class="col-sm-4 font-1" align="right"><font color="#323232" face="Modern">I'm Social!&nbsp;
-	 <a href="https://in.linkedin.com/in/saxenanikhil26" target="_blank" title="follow me on linkedin" class="tips"><i class="icon-linkedin-1 iconRounded"></i></a>&nbsp;
-	 <a href="https://www.facebook.com/nikhil.saxena26" target="_blank" title="follow me on facebook"><img src="facebook.png" class="Facebook" width="30" height="30"></img></a></div>
+	    <a href="https://in.linkedin.com/in/saxenanikhil26" target="_blank" title="follow me on linkedin" class="tips"><img src="https://cloud.githubusercontent.com/assets/6831942/14830808/38378d68-0c10-11e6-8404-c391f0e9b968.png" width="40px" height="40px"></img></a>
+	    <a href="https://www.facebook.com/nikhil.saxena26" target="_blank" title="follow me on facebook"><img src="https://cloud.githubusercontent.com/assets/6831942/14830822/4f6506dc-0c10-11e6-9608-0e960a3fcde6.png" width="40px" height="40px"></img></a>
+	    <a href="https://plus.google.com/u/0/+NikhilSaxena26/about" target="_blank" title="follow me on google+"><img src="https://cloud.githubusercontent.com/assets/6831942/14830841/5eea7b28-0c10-11e6-8b38-c5e161f52d89.png" width="40px" height="40px"></img></a>
+	 </div>
     </div>
    <img src="https://cloud.githubusercontent.com/assets/6831942/14806233/dc657e72-0b8e-11e6-976e-461df6ec7066.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Nikhil Saxena" width="300" height="300" title="Yes! It's Me :D" >
    <br><br><br><font size="5" face="Modern">Hi, I am </font><b><font size="6">Nikhil Saxena</b></font>
