--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
- <style>
+    
+    <!--CSS for my website-->
+    <link rel="stylesheet" type="text/css" href="https://github.com/nikhilsaxena/nikhilsaxena.github.io/blob/master/site.css">
+ <!--<style>
   .navbar {
    padding-top: 0px;
    padding-bottom: 0px;
@@ -78,7 +81,7 @@
   width:200px;
   } 
    
- </style>
+ </style> -->
  
  </head>
  
