--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     
     <!--CSS for my website-->
-    <link rel="stylesheet" type="text/css" href="https://github.com/nikhilsaxena/nikhilsaxena.github.io/blob/master/site.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/nikhilsaxena/nikhilsaxena.github.io/master/site.css">
  
  </head>
  
