--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	                  <ul class="content line_spacing ">
 	                      <li> This is one of my latest Project.</li>
 	                      <li> I always wanted to have my own Portfolio, my own space over this network of networks (Internet).</li>
-	                      <li> With my portfolio, I am showcasing the skills which i possess.</li>
+	                      <li> With my portfolio, I am showcasing the skills which I possess.</li>
 	                      <li> I have kept my Portfolio simple, which also depicts my simple nature.</li>
 	                      <li> Technology Used- <b>Bootstrap, CSS</b>.</li>
 	                  </ul> 
