--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          <br>
          <font size="5" face="Modern">Hi, I am </font><b><font size="6">Nikhil Saxena</b></font>
          <br>
-           <font size="3"><span class="glyphicon glyphicon-map-marker" title="It's where I live"></span> Pune, India</font><br><br>
+           <font size="3"><span class="glyphicon glyphicon-map-marker" title="It's where I live"></span> Gurgaon, India</font><br><br>
            <font size="5" color="#323232" face="Modern" > A Software Engineer By Profession, And A Foodie By Heart</font> 
      	 <br>
 		 <br> 
