--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			   </div>
 			   <div class="col-sm-1"></div>
 			   <div class="col-sm-3">
-			     <img src="C:\Users\saxen\Downloads\awsdevassociate.png" width="280px" height="120px"></img>
+			     <img src="https://user-images.githubusercontent.com/6831942/49538868-641a0100-f8f2-11e8-8a0a-7c7e53ba724f.png" width="280px" height="120px"></img>
 			   </div>
 			   <div class="col-sm-2"></div>
       	    </div><br>
